--- a/ActivityRingsSample/app/src/main/res/layout/activity_main.xml
+++ b/ActivityRingsSample/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#000000">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ActivityRings Sample"
+            android:textColor="#9d9d9d"
+            android:textSize="32sp"
+            android:layout_marginBottom="80dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/ring_view"/>
+
         <com.jbms.activityring.lib.ActivityRingsView
             android:id="@+id/ring_view"
             android:layout_width="200dp"
