--- a/ActivityRingsSample/app/src/main/res/layout/activity_main.xml
+++ b/ActivityRingsSample/app/src/main/res/layout/activity_main.xml
@@ -28,21 +28,23 @@
             app:layout_constraintTop_toTopOf="parent"/>
         <Button
             android:id="@+id/btn_ring_start"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
             android:text="START"
-            android:textColor="#9d9d9d"
+            android:textColor="#343434"
+            android:background="@drawable/bg_fill_green500_rd"
             android:layout_marginTop="50dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ring_view"/>
         <Button
             android:id="@+id/btn_ring_init"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
             android:text="INIT"
-            android:textColor="#9d9d9d"
-            android:layout_marginTop="10dp"
+            android:textColor="#343434"
+            android:background="@drawable/bg_fill_green500_rd"
+            android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_ring_start"/>
