--- a/ActivityRingsSample/app/src/main/res/layout/activity_main.xml
+++ b/ActivityRingsSample/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:id="@+id/btn_ring_start"
             android:layout_width="120dp"
             android:layout_height="40dp"
-            android:text="START"
+            android:text="@string/start"
             android:textColor="#343434"
             android:background="@drawable/bg_fill_green500_rd"
             android:layout_marginTop="50dp"
@@ -41,7 +41,7 @@
             android:id="@+id/btn_ring_init"
             android:layout_width="120dp"
             android:layout_height="40dp"
-            android:text="INIT"
+            android:text="@string/init"
             android:textColor="#343434"
             android:background="@drawable/bg_fill_green500_rd"
             android:layout_marginTop="20dp"
